--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="static/css/style.css">
     <link rel="stylesheet" type="text/css" href="static/css/header.css">
+    <script type="text/javascript" src="static/js/script.js"></script>
     <title>Conch</title>
 </head>
 
