--- a/templates/login.html
+++ b/templates/login.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <link rel="stylesheet" type="text/css" href="static/css/style.css">
+    <link rel="stylesheet" type="text/css" href="static/css/header.css">
+    <link rel="stylesheet" type="text/css" href="static/css/login.css">
+    <script type="text/css" src="static/js/script.js"></script>
     <title>Login - Conch</title>
 </head>
+
 <body>
-    
+    {{template "header" .}}
+    <div class="login-content">
+        <div class="login-inner">
+            <h2>登录</h2>
+            <form action="login" method="POST" class="login-form">
+                <input type="text" name="username" placeholder="用户名" class="login-input">
+                <input type="password" name="password" placeholder="密码" class="login-input">
+                <button type="submit" class="button">登录</button>
+            </form>
+            <a href="">忘记密码</a>
+        </div>
+    </div>
 </body>
+
 </html>
