--- a/static/css/header.css
+++ b/static/css/header.css
@@ -133,7 +133,7 @@
     margin-right: 16px;
 }
 
-.register-button {
+.signup-button {
     color: #ffffff;
     background-color: orangered;
     border-color: orangered;
