--- a/templates/lib/header.html
+++ b/templates/lib/header.html
@@ -38,7 +38,7 @@
         <div class="header-user">
             <div class="profile-area">
                 <buton type="button" class="login-button button" onclick="login()">登录</buton>
-                <buton type="button" class="register-button button" onclick="signup()">加入Conch</buton>
+                <buton type="button" class="signup-button button" onclick="signup()">加入Conch</buton>
             </div>
         </div>
         {{end}}
