--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,16 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>注册 | 神奇海螺</title>
+    <link rel="stylesheet" type="text/css" href="static/css/style.css">
+    <link rel="stylesheet" type="text/css" href="static/css/header.css">
+    <link rel="stylesheet" type="text/css" href="static/css/login.css">
+    <script type="text/css" src="static/js/script.js"></script>
+    <title>Signup - Conch</title>
 </head>
+
 <body>
-    <form action="signupAccount" method="POST">
-        用户名<input type="text" name="username">
-        密码<input type="password" name="password">
-        昵称<input type="text" name="nickname">
-        <input type="submit" value="注册">
-    </form>
+    {{template "header" .}}
+    <div class="login-content">
+        <div class="login-inner">
+            <h2>登录</h2>
+            <form action="login" method="POST" class="login-form">
+                <input type="text" name="username" placeholder="用户名" class="login-input">
+                <input type="password" name="password" placeholder="密码" class="login-input">
+                <button type="submit" class="button">登录</button>
+            </form>
+            <a href="">忘记密码</a>
+        </div>
+    </div>
 </body>
+
 </html>
