signup info check

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -6,22 +6,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="static/css/style.css">
     <link rel="stylesheet" type="text/css" href="static/css/header.css">
-    <link rel="stylesheet" type="text/css" href="static/css/login.css">
-    <script type="text/css" src="static/js/script.js"></script>
+    <link rel="stylesheet" type="text/css" href="static/css/signup.css">
+    <script type="text/javascript" src="static/js/script.js"></script>
     <title>Signup - Conch</title>
 </head>
 
 <body>
     {{template "header" .}}
-    <div class="login-content">
-        <div class="login-inner">
-            <h2>登录</h2>
-            <form action="login" method="POST" class="login-form">
-                <input type="text" name="username" placeholder="用户名" class="login-input">
-                <input type="password" name="password" placeholder="密码" class="login-input">
-                <button type="submit" class="button">登录</button>
+    <div class="signup-content">
+        <div class="signup-inner">
+            <h2>注册</h2>
+            <form action="signup" method="POST" onsubmit="return validateForm(this)" class="signup-form">
+                <div>
+                    <span>用户名</span>
+                    <input type="text" name="username" class="signup-input" required="required" 
+                        placeholder="6至16位大小写字母、数字和下划线" pattern="^[a-zA-Z0-9_]{6,16}$" title="6至16位大小写字母、数字和下划线"
+                    >
+                </div>
+                <div>
+                    <span>密码</span>
+                    <input type="password" name="password" class="signup-input" required="required"
+                        placeholder="6至20位大小写字母、数字和下划线" pattern="^[a-zA-Z0-9_]{6,20}$" title="6至20位大小写字母、数字和下划线"
+                    >
+                </div>
+                <div>
+                    <span>确认密码</span>
+                    <input type="password" name="password2" class="signup-input" required="required"
+                        placeholder="确认密码" pattern="^[a-zA-Z0-9_]{6,20}$" title="6至20位大小写字母、数字和下划线"
+                    >
+                </div>
+                <div>
+                    <span>昵称</span>
+                    <input type="text" name="nickname" class="signup-input" required="required"
+                        placeholder="不超过20位非空白字符" pattern="^[\S]{1,20}$" minlength="1" maxlength="20" title="不超过20位非空白字符"
+                    >
+                </div>
+                <div>
+                    <span>个性签名</span>
+                    <input type="text" name="motto" placeholder="个性签名" class="signup-input">
+                </div>
+                <button type="submit" class="button">注册</button>
             </form>
-            <a href="">忘记密码</a>
+            <p class="agreement">注册即代表同意《Conch协议》《隐私保护指引》</p>
         </div>
     </div>
 </body>
