--- a/templates/login.html
+++ b/templates/login.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="static/css/style.css">
     <link rel="stylesheet" type="text/css" href="static/css/header.css">
     <link rel="stylesheet" type="text/css" href="static/css/login.css">
-    <script type="text/css" src="static/js/script.js"></script>
+    <script type="text/javascript" src="static/js/script.js"></script>
     <title>Login - Conch</title>
 </head>
 
