--- a/static/css/header.css
+++ b/static/css/header.css
@@ -3,6 +3,8 @@
     min-width: 1032px;
     box-shadow: 0 1px 3px rgba(26, 26, 26, .1);
     background-color: #ffffff;
+    overflow: hidden;
+    margin-bottom: 1px;
 }
 
 .header-inner {
