--- a/templates/index.html
+++ b/templates/index.html
@@ -6,12 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="static/css/style.css">
     <link rel="stylesheet" type="text/css" href="static/css/header.css">
+    <link rel="stylesheet" type="text/css" href="static/css/question.css">
     <script type="text/javascript" src="static/js/script.js"></script>
     <title>Conch</title>
 </head>
 
 <body>
     {{template "header" .}}
+    {{template "question"}}
 </body>
 
 </html>
