--- a/public/css/login.css
+++ b/public/css/login.css
@@ -5,22 +5,23 @@ body {
     background-size: cover;
 }
 
-.signup-content {
+.login-content {
     display: flex;
     justify-content: center;
 }
 
-.signup-inner {
+.login-inner {
     margin-top: 100px;
+    width: 352px;
     padding: 24px;
     background-color: #ffffff;
     text-align: center;
 }
 
-.signup-input {
+.login-input {
+    display: block;
     width: 352px;
     height: 48px;
-    padding-left: 16px;
     outline: none;
     border: none;
     border-bottom: 1px solid #ebebeb;
@@ -28,25 +29,17 @@ body {
     font-size: 15px;
 }
 
-.signup-form {
+.login-form {
     margin: 24px 0;
 }
 
-.signup-form button {
+.login-form button {
     width: 320px;
     height: 34px;
     margin: 24px 16px;
-    background-color: orangered;
-    color: #ffffff;
-    border-color: orangered;
 }
 
-.signup-form span {
-    display: inline-block;
-    width: 80px;
-    text-align: left;
-}
-
-.agreement {
-    color: #808080;
+.login-inner a {
+    text-decoration: none;
+    color: orangered;
 }
