--- a/templates/signup.html
+++ b/templates/signup.html
@@ -45,7 +45,7 @@
                     <span>个性签名</span>
                     <input type="text" name="motto" placeholder="个性签名" class="signup-input">
                 </div>
-                <button type="submit" class="button">注册</button>
+                <button type="submit" class="button orangered-button">注册</button>
             </form>
             <p class="agreement">注册即代表同意《Conch协议》《隐私保护指引》</p>
         </div>
