--- a/templates/index.html
+++ b/templates/index.html
@@ -7,13 +7,16 @@
     <link rel="stylesheet" type="text/css" href="static/css/style.css">
     <link rel="stylesheet" type="text/css" href="static/css/header.css">
     <link rel="stylesheet" type="text/css" href="static/css/question.css">
+    <link rel="stylesheet" type="text/css" href="static/css/question-flow.css">
+    <link rel="stylesheet" type="text/css" href="static/css/index.css">
     <script type="text/javascript" src="static/js/script.js"></script>
+    <script type="text/javascript" src="static/js/wangEditor.min.js"></script>
     <title>Conch</title>
+    </style>
 </head>
 
 <body>
     {{template "header" .}}
-    {{template "question"}}
 </body>
 
 </html>
