--- a/templates/login.html
+++ b/templates/login.html
@@ -19,7 +19,7 @@
             <form action="login" method="POST" class="login-form">
                 <input type="text" name="username" placeholder="用户名" class="login-input">
                 <input type="password" name="password" placeholder="密码" class="login-input">
-                <button type="submit" class="button">登录</button>
+                <button type="submit" class="button orangered-button">登录</button>
             </form>
             <a href="">忘记密码</a>
         </div>
