--- a/templates/lib/question-profile.html
+++ b/templates/lib/question-profile.html
@@ -1,21 +1,21 @@
-{{define "question"}}
+{{define "question-profile"}}
     <div class="question-header">
         <div class="question-content">
             <div class="question-main">
-                <h1 class="question-header-title">如何评价温柔可爱的司空君？</h1>
+                <h1 class="question-header-title">{{.Title}}</h1>
                 <div class="question-header-detail">
-                    <sapn>司空君为什么可以这么可爱啊？</sapn>
+                    <sapn>{{.Detail}}</sapn>
                 </div>
             </div>
             <div class="question-header-side">
                 <div class="question-follow-status">
                     <div class="question-follow-item">
                         <div class="question-follow-itemname">关注者</div>
-                        <div class="question-follow-itemvalue">233</div>
+                        <div class="question-follow-itemvalue">{{.Follow}}</div>
                     </div>
                     <div class="question-follow-item question-pageviews">
                         <div class="question-follow-itemname">浏览量</div>
-                        <div class="question-follow-itemvalue">1234</div>
+                        <div class="question-follow-itemvalue">{{.Pageview}}</div>
                     </div>
                 </div>
             </div>
