--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,10 +1,26 @@
-.flow-content {
+.content {
     display: flex;
-    min-width: 1032px;
+    min-width: 1000px;
     width: 1000px;
     padding: 0 16px;
-    height: 20px;
     margin: 10px auto;
-    align-items: center;
-    background-color: greenyellow;
+    align-items: flex-start;
+}
+
+.main {
+    box-sizing: border-box;
+    background-color: #ffffff;
+    margin-right: 10px;
+    width: 694px;
+    border: 1px solid #f0f2f7;
+    border-radius: 2px;
+}
+
+.sidebar {
+    box-sizing: border-box;
+    background-color: #ffffff;
+    width: 296px;
+    padding: 10px;
+    border: 1px solid #f0f2f7;
+    border-radius: 2px;
 }
