--- a/templates/index.html
+++ b/templates/index.html
@@ -4,19 +4,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="static/css/style.css">
-    <link rel="stylesheet" type="text/css" href="static/css/header.css">
-    <link rel="stylesheet" type="text/css" href="static/css/question.css">
-    <link rel="stylesheet" type="text/css" href="static/css/question-flow.css">
-    <link rel="stylesheet" type="text/css" href="static/css/index.css">
-    <script type="text/javascript" src="static/js/script.js"></script>
-    <script type="text/javascript" src="static/js/wangEditor.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="/static/css/style.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/header.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/question-flow.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/index.css">
+    <script type="text/javascript" src="/static/js/script.js"></script>
+    <script type="text/javascript" src="/static/js/wangEditor.min.js"></script>
     <title>Conch</title>
     </style>
 </head>
 
 <body>
-    {{template "header" .}}
+    {{template "header" .U}}
+    <div class="content">
+        <div class="main">
+            {{template "question-flow" .Q}}
+            {{template "question-flow" .Q}}
+            {{template "question-flow" .Q}}
+            {{template "question-flow" .Q}}
+            {{template "question-flow" .Q}}
+            {{template "question-flow" .Q}}
+            {{template "question-flow" .Q}}
+            {{template "question-flow" .Q}}
+            {{template "question-flow" .Q}}
+        </div>
+        <div class="sidebar">
+            <h2>施工中</h2>
+        </div>
+    </div>
 </body>
 
 </html>
