--- a/templates/lib/question-flow.html
+++ b/templates/lib/question-flow.html
@@ -1,5 +1,8 @@
 {{define "question-flow"}}
     <div class="question-flow">
-        <>
+        <h3>{{.Title}}</h3>
+        <div>
+            {{.Detail}}
+        </div>
     </div>
 {{end}}
