--- a/templates/lib/question-profile.html
+++ b/templates/lib/question-profile.html
@@ -23,7 +23,7 @@
         <div class="question-footer">
             <div class="question-footer-inner">
                 <button class="button follow-button">关注问题</button>
-                <button class="button answer-button">书写回答</button>
+                <a href="/answer/new?qid={{.Qid}}" style="text-decoration: none;" class="button answer-button">撰写回答</a>
             </div>
         </div>
     </div>
