--- a/public/css/style.css
+++ b/public/css/style.css
@@ -35,3 +35,53 @@ body {
 .button:active {
     filter: brightness(0.75);
 }
+
+/*wangEditor*/
+.text-editor table {
+    border-top: 1px solid #ccc;
+    border-left: 1px solid #ccc;
+}
+
+.text-editor table td,
+.text-editor table th {
+    border-bottom: 1px solid #ccc;
+    border-right: 1px solid #ccc;
+    padding: 3px 5px;
+}
+
+.text-editor table th {
+    border-bottom: 2px solid #ccc;
+    text-align: center;
+}
+
+/* blockquote 样式 */
+.text-editor blockquote {
+    display: block;
+    border-left: 8px solid #d0e5f2;
+    padding: 5px 10px;
+    margin: 10px 0;
+    line-height: 1.4;
+    font-size: 100%;
+    background-color: #f1f1f1;
+}
+
+/* code 样式 */
+.text-editor code {
+    display: inline-block;
+    *display: inline;
+    *zoom: 1;
+    background-color: #f1f1f1;
+    border-radius: 3px;
+    padding: 3px 5px;
+    margin: 0 3px;
+}
+
+.text-editor pre code {
+    display: block;
+}
+
+/* ul ol 样式 */
+.text-editor ul,
+.text-editor ol {
+    margin: 10px 0 10px 20px;
+}
