--- a/public/css/user-profile.css
+++ b/public/css/user-profile.css
@@ -1,5 +1,4 @@
 .profile-header {
-    background-color: #ffffff;
     width: 1000px;
     padding: 0 16px;
     margin: 10px auto;
@@ -14,7 +13,7 @@
 .profile-avatar {
     height: 100px;
     width: 100px;
-    border: 4px solid orangered;
+    border: 4px solid #ffffff;
     border-radius: 8px;
 }
 
