--- a/templates/index.html
+++ b/templates/index.html
@@ -16,8 +16,8 @@
 
 <body>
     {{template "header" .User}}
-    <div class="content">
-        <div class="main">
+    <div class="app-main">
+        <div class="main-left">
             <div class="top-tabs-wrapper">
                 <ul class="top-tabs">
                     <li><a href="">推荐</a></li>
