--- a/templates/lib/question-header.html
+++ b/templates/lib/question-header.html
@@ -1,4 +1,4 @@
-{{define "question-profile"}}
+{{define "question-header"}}
     <div class="question-header">
         <div class="question-content">
             <div class="question-main">
