--- a/templates/index.html
+++ b/templates/index.html
@@ -29,8 +29,9 @@
                 {{template "question-flow" .}}
             {{end}}
         </div>
-        <div class="sidebar">
-            <h2>侧边栏施工中</h2>
+        <div class="sidebar" style="text-align: center;">
+            <h2>侧边栏施工中</h2></br>
+            <h3><a style="text-decoration: none;" href="https://github.com/moonstviolet">Github</a></h3>
         </div>
     </div>
 </body>
