--- a/templates/lib/answer-flow.html
+++ b/templates/lib/answer-flow.html
@@ -4,5 +4,6 @@
     <div class="answer-detail text-editor">
        {{.Detail}}
     </div>
+    <span>{{.Lastmod.Local.Format "2006-01-02 15:04"}}</span>
 </div>
 {{end}}
