--- a/templates/lib/question-header.html
+++ b/templates/lib/question-header.html
@@ -22,7 +22,7 @@
         </div>
         <div class="question-footer">
             <div class="question-footer-inner">
-                <button class="button follow-button">关注问题</button>
+                <button id="followQuestion" value="follow" class="button orangered-button follow-button" onclick="followQuestion()">关注问题</button>
                 <a href="/answer/new?qid={{.Qid}}" style="text-decoration: none;" class="button answer-button">撰写回答</a>
             </div>
         </div>
