debug: post answer

--- a/templates/answer-new.html
+++ b/templates/answer-new.html
@@ -23,7 +23,7 @@
             <p class="detail-placeholder">请在此写下你的回答</p>
             <div id="toolbar"></div>
             <div id="text" class="detail-input"></div>
-            <button type="submit" class="publish-button button orangered-button"">发布回答</button>
+            <button type="submit" class="publish-button button orangered-button">发布回答</button>
         </form>
     </div>
     <script type="text/javascript">
