--- a/templates/user-profile.html
+++ b/templates/user-profile.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="/static/css/user-profile.css">
     <link rel="stylesheet" type="text/css" href="/static/css/answer-flow.css">
     <script type="text/javascript" src="/static/js/script.js"></script>
-    <script type="text/javascript" src="/static/js/wangEditor.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/wangeditor@latest/dist/wangEditor.min.js"></script>
     <title>{{.LoginUser.Nickname}} - Conch</title>
     </style>
 </head>
