--- a/templates/question-read.html
+++ b/templates/question-read.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="/static/css/question-header.css">
     <link rel="stylesheet" type="text/css" href="/static/css/answer-flow.css">
     <script type="text/javascript" src="/static/js/script.js"></script>
-    <script type="text/javascript" src="/static/js/wangEditor.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/wangeditor@latest/dist/wangEditor.min.js"></script>
     <title>Conch</title>
     </style>
 </head>
