debug: question html

--- a/templates/question-new.html
+++ b/templates/question-new.html
@@ -23,7 +23,7 @@
             <p class="detail-placeholder">输入问题背景、条件等详细信息（选填）</p>
             <div id="toolbar"></div>
             <div id="text" class="detail-input"></div>
-            <button type="submit" class="publish-button button orangered-button"">发布问题</button>
+            <button type="submit" class="publish-button button orangered-button">发布问题</button>
         </form>
     </div>
     <script type="text/javascript">
